--- a/modules/client/azure-pipelines-prod.yml
+++ b/modules/client/azure-pipelines-prod.yml
@@ -18,15 +18,25 @@ pr:
 resources:
   - repo: self
 
+# ---------------- Variables ----------------
 variables:
-  dockerRegistryServiceConnection: "ghcr-conn"
-  owner: "hubenschmidt"
-  imageName: "pina-colada-client"
-  imageRepository: "$(owner)/$(imageName)"
-  dockerfilePath: "modules/client/Dockerfile"
-  buildContext: "modules/client"
-  tagLatest: "latest"
-  tagBuildId: "$(Build.SourceBranchName)-$(Build.BuildId)"
+  - group: "pina-colada-digital-ocean"
+  - name: dockerRegistryServiceConnection
+    value: "ghcr-conn"
+  - name: owner
+    value: "hubenschmidt"
+  - name: imageName
+    value: "pina-colada-client"
+  - name: imageRepository
+    value: "$(owner)/$(imageName)"
+  - name: dockerfilePath
+    value: "modules/client/Dockerfile"
+  - name: buildContext
+    value: "modules/client"
+  - name: tagLatest
+    value: "latest"
+  - name: tagBuildId
+    value: "$(Build.SourceBranchName)-$(Build.BuildId)"
 
 stages:
   - stage: Build
@@ -53,7 +63,6 @@ stages:
     displayName: Push Docker Image to GHCR
     dependsOn: Build
     # Only deploy on master (avoid PR validations)
-    # DO_API_TOKEN and DO_APP_ID are set in Azure DevOps Project Settings → Pipelines → Library → Variable groups (or Pipeline Variables).
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     jobs:
       - job: Push
@@ -78,7 +87,7 @@ stages:
 
   - stage: Deploy
     displayName: Deploy to DigitalOcean App Platform
-    dependsOn: Push
+    # dependsOn: Push
     # Only deploy on master (avoid PR validations)
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     jobs:
@@ -90,11 +99,18 @@ stages:
             - Agent.OS -equals Linux
         steps:
           - script: |
+              echo "=== Debugging Variables ==="
+              echo "DO_API_TOKEN exists: $([[ -n '$DO_API_TOKEN' ]] && echo 'YES' || echo 'NO')"
+              echo "DO_API_TOKEN value: $DO_API_TOKEN"
+              echo "DO_APP_ID exists: $([[ -n '$DO_APP_ID' ]] && echo 'YES' || echo 'NO')"
+              echo "DO_APP_ID value: $DO_APP_ID"
+              env | grep ^DO_ || echo "No DO_* variables found"
+            displayName: "Debug - Check Variables"
+            env:
+              DO_API_TOKEN: $(DO_API_TOKEN)
+              DO_APP_ID: $(DO_APP_ID)
+          - script: |
               echo "Triggering deployment on DigitalOcean App Platform..."
-              echo "DEBUG: DO_APP_ID is set: $([ -z "$DO_APP_ID" ] && echo 'NO' || echo 'YES')"
-              echo "DEBUG: DO_API_TOKEN is set: $([ -z "$DO_API_TOKEN" ] && echo 'NO' || echo 'YES')"
-              echo "DEBUG: DO_APP_ID value length: $(echo -n "$DO_APP_ID" | wc -c)"
-              echo "DEBUG: DO_API_TOKEN value length: $(echo -n "$DO_API_TOKEN" | wc -c)"
               http_code=$(curl -sS -o /tmp/do_deploy.json -w "%{http_code}" \
                 -X POST \
                 -H "Authorization: Bearer $DO_API_TOKEN" \
