--- a/modules/client/package.json
+++ b/modules/client/package.json
@@ -7,12 +7,15 @@
     "build": "next build",
     "start": "next start -p 80",
     "test": "jest --watchAll",
-    "test:ci": "jest --ci --reporters=jest-junit --coverage --passWithNoTests"
+    "test:ci": "jest --ci --reporters=jest-junit --coverage --passWithNoTests",
+    "generate-types": "supabase gen types typescript --project-id \"$SUPABASE_PROJECT_REF\" --schema public > lib/database.types.ts",
+    "generate-types:local": "supabase gen types typescript --local --schema public > lib/database.types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
+    "pg": "^8.11.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -22,11 +25,13 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "supabase": ">=1.8.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
