--- a/modules/client/package.json
+++ b/modules/client/package.json
@@ -12,6 +12,8 @@
     "generate-types:local": "supabase gen types typescript --local --schema public > lib/database.types.ts"
   },
   "dependencies": {
+    "@mantine/core": "^7.17.8",
+    "@mantine/hooks": "^7.17.8",
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
