--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -75,17 +75,11 @@ stages:
         steps:
           - script: |
               echo "Installing Supabase CLI..."
-              # Download and install Supabase CLI binary
-              # Get latest version from GitHub releases
-              SUPABASE_VERSION=$(curl -s https://api.github.com/repos/supabase/cli/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-              echo "Installing Supabase CLI version: $SUPABASE_VERSION"
-              
-              # Download binary for Linux x64
-              curl -L "https://github.com/supabase/cli/releases/download/${SUPABASE_VERSION}/supabase_${SUPABASE_VERSION#v}_linux_amd64.tar.gz" -o /tmp/supabase.tar.gz
-              
-              # Extract and install to user-writable location
+              # Download and install Supabase CLI binary directly from GitHub releases
               mkdir -p $(Agent.ToolsDirectory)/supabase
-              tar -xzf /tmp/supabase.tar.gz -C $(Agent.ToolsDirectory)/supabase
+              curl -L "https://github.com/supabase/cli/releases/latest/download/supabase-linux-amd64" -o $(Agent.ToolsDirectory)/supabase/supabase
+              
+              # Make executable
               chmod +x $(Agent.ToolsDirectory)/supabase/supabase
               
               # Add to PATH for this job
