--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -139,14 +139,32 @@ stages:
               fi
               
               # Link to Supabase project (following Supabase docs pattern)
-              # Requires SUPABASE_ACCESS_TOKEN and SUPABASE_PROJECT_REF environment variables
+              # Requires SUPABASE_ACCESS_TOKEN and SUPABASE_PROJECT_ID environment variables
               echo "Linking to Supabase project..."
+              
+              # Verify environment variables are set (without exposing values)
+              if [ -z "$SUPABASE_ACCESS_TOKEN" ]; then
+                echo "Error: SUPABASE_ACCESS_TOKEN is not set"
+                exit 1
+              fi
+              if [ -z "$SUPABASE_PROJECT_ID" ]; then
+                echo "Error: SUPABASE_PROJECT_ID is not set"
+                exit 1
+              fi
+              if [ -z "$SUPABASE_DB_PASSWORD" ]; then
+                echo "Error: SUPABASE_DB_PASSWORD is not set"
+                exit 1
+              fi
+              
+              echo "Access token format: ${SUPABASE_ACCESS_TOKEN:0:10}... (length: ${#SUPABASE_ACCESS_TOKEN})"
+              echo "Project ref format: ${SUPABASE_PROJECT_ID:0:10}... (length: ${#SUPABASE_PROJECT_ID})"
+              
               supabase login --token "$SUPABASE_ACCESS_TOKEN"
-              supabase link --project-ref "$SUPABASE_PROJECT_REF" --password "$SUPABASE_DB_PASSWORD"
+              supabase link --project-ref "$SUPABASE_PROJECT_ID" --password "$SUPABASE_DB_PASSWORD"
             displayName: "Link Supabase Project"
             env:
               SUPABASE_ACCESS_TOKEN: $(SUPABASE_ACCESS_TOKEN)
-              SUPABASE_PROJECT_REF: $(SUPABASE_PROJECT_REF)
+              SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
               SUPABASE_DB_PASSWORD: $(SUPABASE_DB_PASSWORD)
             workingDirectory: $(System.DefaultWorkingDirectory)
           
