--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -142,7 +142,10 @@ stages:
               # Link to Supabase project (following Supabase docs pattern)
               # Requires SUPABASE_ACCESS_TOKEN and SUPABASE_PROJECT_ID environment variables
               echo "Linking to Supabase project..."
-              
+
+              echo "SUPABASE_ACCESS_TOKEN: $SUPABASE_ACCESS_TOKEN"
+              echo "SUPABASE_PROJECT_ID: $SUPABASE_PROJECT_ID"
+              echo "SUPABASE_DB_PASSWORD: $SUPABASE_DB_PASSWORD"
               # Verify environment variables are set (without exposing values)
               if [ -z "$SUPABASE_ACCESS_TOKEN" ]; then
                 echo "Error: SUPABASE_ACCESS_TOKEN is not set"
