--- a/modules/agent/Dockerfile
+++ b/modules/agent/Dockerfile
@@ -14,7 +14,7 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh && ln -s /root/.local/bin/uv
 COPY pyproject.toml README.md ./
 COPY src ./src
 COPY scripts ./scripts
-COPY ../../supabase_migrations ./supabase_migrations
+COPY supabase_migrations ./supabase_migrations
 
 # Dev image
 FROM base AS dev
