--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       # Mount source code with consistency mode for better performance
       - ./modules/agent:/app:delegated
       # Mount migrations directory
-      - ./supabase_migrations:/app/supabase_migrations:ro
+      - ./modules/agent/supabase_migrations:/app/supabase_migrations:ro
       # Exclude these from the mount to avoid conflicts
       - /app/__pycache__
       - /app/.pytest_cache
