--- a/modules/client/azure-pipelines-prod.yml
+++ b/modules/client/azure-pipelines-prod.yml
@@ -1,117 +1,117 @@
-# trigger:
-#   branches:
-#     include:
-#       - master
-#   paths:
-#     include:
-#       - "**/client/**"
+trigger:
+  branches:
+    include:
+      - master
+  paths:
+    include:
+      - "**/client/**"
 
-# pr:
-#   autoCancel: true
-#   branches:
-#     include:
-#       - master
-#   paths:
-#     include:
-#       - "**/client/**"
+pr:
+  autoCancel: true
+  branches:
+    include:
+      - master
+  paths:
+    include:
+      - "**/client/**"
 
-# resources:
-#   - repo: self
+resources:
+  - repo: self
 
-# # ---------------- Variables ----------------
-# variables:
-#   - group: "pina-colada-digital-ocean"
-#   - name: dockerRegistryServiceConnection
-#     value: "ghcr-conn"
-#   - name: owner
-#     value: "hubenschmidt"
-#   - name: imageName
-#     value: "pina-colada-client"
-#   - name: imageRepository
-#     value: "$(owner)/$(imageName)"
-#   - name: dockerfilePath
-#     value: "modules/client/Dockerfile"
-#   - name: buildContext
-#     value: "modules/client"
-#   - name: tagLatest
-#     value: "latest"
-#   - name: tagBuildId
-#     value: "$(Build.SourceBranchName)-$(Build.BuildId)"
+# ---------------- Variables ----------------
+variables:
+  - group: "pina-colada-digital-ocean"
+  - name: dockerRegistryServiceConnection
+    value: "ghcr-conn"
+  - name: owner
+    value: "hubenschmidt"
+  - name: imageName
+    value: "pina-colada-client"
+  - name: imageRepository
+    value: "$(owner)/$(imageName)"
+  - name: dockerfilePath
+    value: "modules/client/Dockerfile"
+  - name: buildContext
+    value: "modules/client"
+  - name: tagLatest
+    value: "latest"
+  - name: tagBuildId
+    value: "$(Build.SourceBranchName)-$(Build.BuildId)"
 
-# stages:
-#   - stage: Build
-#     displayName: Build app
-#     jobs:
-#       - job: Build
-#         displayName: Node build
-#         pool:
-#           name: Default # self-hosted Linux agent pool
-#           demands:
-#             - Agent.OS -equals Linux
-#         steps:
-#           - task: NodeTool@0
-#             inputs:
-#               versionSpec: "24"
-#             displayName: "Install Node.js"
-#           - task: Npm@1
-#             displayName: "npm install (modules/client)"
-#             inputs:
-#               command: "install"
-#               workingDir: "$(Build.SourcesDirectory)/modules/client"
+stages:
+  - stage: Build
+    displayName: Build app
+    jobs:
+      - job: Build
+        displayName: Node build
+        pool:
+          name: Default # self-hosted Linux agent pool
+          demands:
+            - Agent.OS -equals Linux
+        steps:
+          - task: NodeTool@0
+            inputs:
+              versionSpec: "24"
+            displayName: "Install Node.js"
+          - task: Npm@1
+            displayName: "npm install (modules/client)"
+            inputs:
+              command: "install"
+              workingDir: "$(Build.SourcesDirectory)/modules/client"
 
-#   - stage: Push
-#     displayName: Push Docker Image to GHCR
-#     dependsOn: Build
-#     # Only deploy on master (avoid PR validations)
-#     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-#     jobs:
-#       - job: Push
-#         displayName: Build & push image
-#         pool:
-#           name: Default # self-hosted Linux agent pool
-#           demands:
-#             - Agent.OS -equals Linux
-#         steps:
-#           - task: Docker@2
-#             displayName: "Build and push to GHCR"
-#             inputs:
-#               command: "buildAndPush"
-#               containerRegistry: "$(dockerRegistryServiceConnection)"
-#               repository: "$(imageRepository)" # owner/name ONLY
-#               dockerfile: "$(dockerfilePath)"
-#               buildContext: "$(buildContext)"
-#               addPipelineData: false
-#               tags: |
-#                 $(tagLatest)
-#                 $(tagBuildId)
+  - stage: Push
+    displayName: Push Docker Image to GHCR
+    dependsOn: Build
+    # Only deploy on master (avoid PR validations)
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    jobs:
+      - job: Push
+        displayName: Build & push image
+        pool:
+          name: Default # self-hosted Linux agent pool
+          demands:
+            - Agent.OS -equals Linux
+        steps:
+          - task: Docker@2
+            displayName: "Build and push to GHCR"
+            inputs:
+              command: "buildAndPush"
+              containerRegistry: "$(dockerRegistryServiceConnection)"
+              repository: "$(imageRepository)" # owner/name ONLY
+              dockerfile: "$(dockerfilePath)"
+              buildContext: "$(buildContext)"
+              addPipelineData: false
+              tags: |
+                $(tagLatest)
+                $(tagBuildId)
 
-#   - stage: Deploy
-#     displayName: Deploy to DigitalOcean App Platform
-#     dependsOn: Push
-#     # Only deploy on master (avoid PR validations)
-#     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-#     jobs:
-#       - job: Deploy
-#         displayName: Trigger DigitalOcean Deploy
-#         pool:
-#           name: Default
-#           demands:
-#             - Agent.OS -equals Linux
-#         steps:
-#           - script: |
-#               echo "Triggering deployment on DigitalOcean App Platform..."
-#               http_code=$(curl -sS -o /tmp/do_deploy.json -w "%{http_code}" \
-#                 -X POST \
-#                 -H "Authorization: Bearer $DO_API_TOKEN" \
-#                 -H "Content-Type: application/json" \
-#                 "https://api.digitalocean.com/v2/apps/$DO_APP_ID/deployments")
-#               echo "POST /deployments => $http_code"
-#               cat /tmp/do_deploy.json
-#               case "$http_code" in
-#                 200|201|202) echo "Deployment triggered." ;;
-#                 *) echo "Deployment API failed"; exit 1 ;;
-#               esac
-#             displayName: "Call DigitalOcean API to redeploy"
-#             env:
-#               DO_API_TOKEN: $(DO_API_TOKEN)
-#               DO_APP_ID: $(DO_APP_ID)
+  - stage: Deploy
+    displayName: Deploy to DigitalOcean App Platform
+    dependsOn: Push
+    # Only deploy on master (avoid PR validations)
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    jobs:
+      - job: Deploy
+        displayName: Trigger DigitalOcean Deploy
+        pool:
+          name: Default
+          demands:
+            - Agent.OS -equals Linux
+        steps:
+          - script: |
+              echo "Triggering deployment on DigitalOcean App Platform..."
+              http_code=$(curl -sS -o /tmp/do_deploy.json -w "%{http_code}" \
+                -X POST \
+                -H "Authorization: Bearer $DO_API_TOKEN" \
+                -H "Content-Type: application/json" \
+                "https://api.digitalocean.com/v2/apps/$DO_APP_ID/deployments")
+              echo "POST /deployments => $http_code"
+              cat /tmp/do_deploy.json
+              case "$http_code" in
+                200|201|202) echo "Deployment triggered." ;;
+                *) echo "Deployment API failed"; exit 1 ;;
+              esac
+            displayName: "Call DigitalOcean API to redeploy"
+            env:
+              DO_API_TOKEN: $(DO_API_TOKEN)
+              DO_APP_ID: $(DO_APP_ID)
