--- a/modules/client/azure-pipelines-prod.yml
+++ b/modules/client/azure-pipelines-prod.yml
@@ -21,6 +21,7 @@ resources:
 # ---------------- Variables ----------------
 variables:
   - group: "pina-colada-digital-ocean"
+  - group: "pina-colada-supabase-prod"
   - name: dockerRegistryServiceConnection
     value: "ghcr-conn"
   - name: owner
@@ -81,6 +82,9 @@ stages:
               dockerfile: "$(dockerfilePath)"
               buildContext: "$(buildContext)"
               addPipelineData: false
+              arguments: |
+                --build-arg NEXT_PUBLIC_SUPABASE_URL=$(NEXT_PUBLIC_SUPABASE_URL)
+                --build-arg NEXT_PUBLIC_SUPABASE_ANON_KEY=$(NEXT_PUBLIC_SUPABASE_ANON_KEY)
               tags: |
                 $(tagLatest)
                 $(tagBuildId)
