--- a/modules/client/package.json
+++ b/modules/client/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
+    "next-runtime-env": "^3.3.0",
     "pg": "^8.11.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
