--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -29,3 +29,10 @@ SMTP_PORT="587"
 SMTP_USERNAME="my-email@gmail.com"
 SMTP_PASSWORD="my app password" # must be an App Password, not your regular password
 SMTP_FROM_EMAIL="my-email@gmail.com"
+RUN_SEEDERS=true # note this isnt present in prod yet because we probably have to change it per \
+# PC-12 https://williamroyco.atlassian.net/browse/PC-12
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=development
