--- a/modules/agent/Dockerfile
+++ b/modules/agent/Dockerfile
@@ -2,19 +2,13 @@
 FROM python:3.12-slim AS base
 WORKDIR /app
 
-# OS deps
+# OS deps (cached unless this changes)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl git build-essential ca-certificates \
  && rm -rf /var/lib/apt/lists/*
 
-# uv
+# uv (cached unless this changes)
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh && ln -s /root/.local/bin/uv /usr/local/bin/uv
-
-# App files
-COPY pyproject.toml README.md ./
-COPY src ./src
-COPY scripts ./scripts
-COPY supabase_migrations ./supabase_migrations
 
 # Dev image
 FROM base AS dev
@@ -23,11 +17,21 @@ ENV PYTHONUNBUFFERED=1 \
     UV_SYSTEM_PYTHON=1 \
     PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1
 
-# Python deps (your pyproject must include fastapi/uvicorn/websockets)
-RUN uv pip install -e . --no-cache-dir && \
+# Copy dependency files first (better caching)
+COPY pyproject.toml README.md ./
+
+# Copy source code (needed for editable install)
+COPY src ./src
+
+# Install Python deps with cache mount (faster rebuilds)
+# This layer is cached unless pyproject.toml or src/ changes
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install -e . --no-cache-dir && \
     uv pip install watchfiles --no-cache-dir
 
-# Copy start.sh to the Docker container
+# Copy remaining application files (changes frequently)
+COPY scripts ./scripts
+COPY migrations ./migrations
 COPY start.sh /usr/src/app/start.sh
 
 # Give execution permissions to the start.sh script
