--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -39,10 +39,12 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["langgraph.templates.agent", "agent"]
+packages = ["langgraph.templates.agent", "agent", "api", "models"]
 [tool.setuptools.package-dir]
 "langgraph.templates.agent" = "src/agent"
 "agent" = "src/agent"
+"api" = "src/api"
+"models" = "src/models"
 
 
 [tool.setuptools.package-data]
