--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -40,7 +40,7 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["langgraph.templates.agent", "agent", "api", "models", "controllers", "repositories", "services"]
+packages = ["langgraph.templates.agent", "agent", "api", "models", "controllers", "repositories", "services", "lib"]
 [tool.setuptools.package-dir]
 "langgraph.templates.agent" = "src/agent"
 "agent" = "src/agent"
@@ -49,6 +49,7 @@ packages = ["langgraph.templates.agent", "agent", "api", "models", "controllers"
 "controllers" = "src/controllers"
 "repositories" = "src/repositories"
 "services" = "src/services"
+"lib" = "src/lib"
 
 
 [tool.setuptools.package-data]
