--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
   "psycopg2-binary>=2.9.11",
   "sqlalchemy>=2.0.0",
   "requests>=2.31.0",
+  "python-jose[cryptography]>=3.3.0",
+  "python-multipart>=0.0.6",
 ]
 
 
