--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -41,17 +41,8 @@ dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
 requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-packages = ["langgraph.templates.agent", "agent", "api", "models", "controllers", "repositories", "services", "lib"]
-[tool.setuptools.package-dir]
-"langgraph.templates.agent" = "src/agent"
-"agent" = "src/agent"
-"api" = "src/api"
-"models" = "src/models"
-"controllers" = "src/controllers"
-"repositories" = "src/repositories"
-"services" = "src/services"
-"lib" = "src/lib"
+[tool.setuptools.packages.find]
+where = ["src"]
 
 
 [tool.setuptools.package-data]
