--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -35,4 +35,4 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=development
+POSTGRES_DB=pina_colada
