loads the login page

--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -36,3 +36,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=pina_colada
+
+# AUTH0
+AUTH0_DOMAIN="dev-gzizexcaww2ggsh4.us.auth0.com"
+AUTH0_AUDIENCE="http://localhost:8000"
