--- a/modules/client/.env.local.example
+++ b/modules/client/.env.local.example
@@ -7,10 +7,14 @@ NEXT_PUBLIC_SUPABASE_URL=""
 # Supabase anon/public key (safe to use in browser)
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
 
-# Job Tracker Authentication (Server-side only)
-# Password for accessing the /jobs route
-JOBS_PASSWORD=""
-AUTH_TOKEN_KEY="arnica-entropy"
-NEXT_PUBLIC_JOBS_PASSWORD=""
 NEXT_PUBLIC_USE_LOCAL_POSTGRES=true
 NODE_ENV="development"
+# AUTH0
+AUTH0_DOMAIN=""
+AUTH0_CLIENT_ID=""
+AUTH0_CLIENT_SECRET=""
+AUTH0_SECRET="" # openssl rand -hex 32
+AUTH0_AUDIENCE="https://api.pinacolada.co"
+AUTH0_SCOPE="openid profile email"
+APP_BASE_URL="http://localhost:3001"
+NEXT_PUBLIC_API_URL="http://localhost:8000"
