--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - NODE_ENV=development
       - HOST=0.0.0.0
       - LANGFUSE_HOST=http://langfuse:3000 # app talks to Langfuse over the compose network
+      - UV_LINK_MODE=copy # Suppress hardlink warning from uv package manager
     dns:
       - 8.8.8.8
       - 8.8.4.4
