--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -27,7 +27,9 @@ dependencies = [
   "wikipedia>=1.4.0",
   "supabase>=2.0.0",
   "psycopg2-binary>=2.9.11",
-  "sqlalchemy>=2.0.0",
+  "sqlalchemy[asyncio]>=2.0.0",
+  "aiosqlite>=0.20.0",
+  "asyncpg>=0.30.0",
   "requests>=2.31.0",
   "python-jose[cryptography]>=3.3.0",
   "python-multipart>=0.0.6",
