--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -33,6 +33,9 @@ dependencies = [
   "requests>=2.31.0",
   "python-jose[cryptography]>=3.3.0",
   "python-multipart>=0.0.6",
+  "playwright>=1.41.0",
+  "beautifulsoup4>=4.12.3",
+  "lxml>=5.1.0",
 ]
 
 
