--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -77,10 +77,17 @@ lint.ignore = [
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
+[tool.pytest.ini_options]
+testpaths = ["src", "tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+
 [dependency-groups]
 dev = [
     "anyio>=4.7.0",
     "mypy>=1.13.0",
     "pytest>=8.3.5",
+    "pytest-asyncio>=0.24.0",
     "ruff>=0.8.2",
 ]
