--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,37 @@
 services:
+  log-daemon:
+    image: docker:cli
+    container_name: log-daemon
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./logs:/logs
+    command: >
+      sh -c '
+      mkdir -p /logs &&
+      echo "Container logs started, saved to logs/ directory" &&
+      docker logs -f pina_colada-client-1 2>&1 | while IFS= read -r line; do
+        DATE=$$(date +%Y-%m-%d)
+        echo "[client] $$line" >> /logs/client-$$DATE.log
+        echo "[client] $$line" >> /logs/docker-compose-$$DATE.log
+      done &
+      docker logs -f pina_colada-agent-1 2>&1 | while IFS= read -r line; do
+        DATE=$$(date +%Y-%m-%d)
+        echo "[agent] $$line" >> /logs/agent-$$DATE.log
+        echo "[agent] $$line" >> /logs/docker-compose-$$DATE.log
+      done &
+      docker logs -f pina_colada-postgres-1 2>&1 | while IFS= read -r line; do
+        DATE=$$(date +%Y-%m-%d)
+        echo "[postgres] $$line" >> /logs/postgres-$$DATE.log
+        echo "[postgres] $$line" >> /logs/docker-compose-$$DATE.log
+      done &
+      wait
+      '
+    depends_on:
+      - client
+      - agent
+      - postgres
+
   client:
     build:
       context: ./modules/client
@@ -22,6 +55,11 @@ services:
         condition: service_healthy
     command: ["npm", "run", "dev"] # overrides Dockerfile start command in dev env
     restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
     # --- LangGraph agent ---
   agent:
@@ -50,6 +88,11 @@ services:
     ports:
       - "2024:2024" # LangGraph API to host
       - "8000:8000" # FastAPI server.py
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
   # --- Langfuse web/UI ---
   # Make sure to update the credential placeholders with your own secrets.
   # We mark them with # CHANGEME in the file below.
@@ -214,6 +257,11 @@ services:
     volumes:
       - langfuse_postgres_data:/var/lib/postgresql/data
       - ./docker/postgres-init:/docker-entrypoint-initdb.d:ro
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     # This Postgres instance hosts multiple databases:
     # - ${COMPOSE_PROJECT_NAME:-pina_colada} - Used by agent/client (created via POSTGRES_DB)
     # - langfuse - Used by Langfuse (created via init script)
