--- a/modules/agent/azure-pipelines-test.yml
+++ b/modules/agent/azure-pipelines-test.yml
@@ -147,12 +147,13 @@ stages:
           - script: |
               echo "Applying database migrations..."
               export PATH="$(Agent.ToolsDirectory)/supabase:$PATH"
-              supabase db push --debug
+              supabase db push --debug --db-url "postgres://postgres.${SUPABASE_PROJECT_ID}:${SUPABASE_DB_PASSWORD}@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
             displayName: "Push Migrations to Supabase"
             continueOnError: false
             workingDirectory: $(System.DefaultWorkingDirectory)
             env:
               SUPABASE_DB_PASSWORD: $(SUPABASE_DB_PASSWORD)
+              SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
 
   - stage: Push
     displayName: Push Docker Image to GHCR
