--- a/modules/agent/azure-pipelines-test.yml
+++ b/modules/agent/azure-pipelines-test.yml
@@ -145,7 +145,7 @@ stages:
               containerRegistry: "$(dockerRegistryServiceConnection)"
               repository: "$(imageRepository)"
               tags: |
-                $(tagTest)
+                $(tagLatest)
                 $(tagBuildId)
 
   - stage: Deploy
