--- a/modules/agent/azure-pipelines-test.yml
+++ b/modules/agent/azure-pipelines-test.yml
@@ -58,6 +58,7 @@ stages:
               repository: "$(imageRepository)"
               dockerfile: "$(dockerfilePath)"
               buildContext: "$(buildContext)"
+              arguments: "--build-arg BUILD_ID=$(tagBuildId)"
               tags: |
                 $(tagLatest)
                 $(tagBuildId)
