--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "requests>=2.31.0",
   "python-jose[cryptography]>=3.3.0",
   "python-multipart>=0.0.6",
+  "openpyxl>=3.1.0",
 ]
 
 
