--- a/modules/client/tsconfig.json
+++ b/modules/client/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2023",
     "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+      "ES2023",
+      "DOM",
+      "DOM.Iterable"
     ],
     "allowJs": true,
     "skipLibCheck": true,
