--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -32,6 +32,9 @@ dependencies = [
   "python-jose[cryptography]>=3.3.0",
   "python-multipart>=0.0.6",
   "openpyxl>=3.1.0",
+  "aiofiles>=25.1.0",
+  "boto3==1.35.81",
+  "botocore==1.35.81",
 ]
 
 
