--- a/modules/client/package.json
+++ b/modules/client/package.json
@@ -22,7 +22,8 @@
     "next-runtime-env": "^3.3.0",
     "pg": "^8.11.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
