saving chat changes

--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -40,3 +40,6 @@ POSTGRES_DB=pina_colada
 # AUTH0
 AUTH0_DOMAIN="dev-gzizexcaww2ggsh4.us.auth0.com"
 AUTH0_AUDIENCE="http://localhost:8000"
+
+# Verbose error logging (development only)
+VERBOSE_ERROR_LOGS=true
