--- a/modules/client/.env.local.example
+++ b/modules/client/.env.local.example
@@ -8,3 +8,6 @@ AUTH0_AUDIENCE="http://localhost:8000"
 AUTH0_SCOPE="openid profile email"
 APP_BASE_URL="http://localhost:3001"
 NEXT_PUBLIC_API_URL="http://localhost:8000"
+
+# Error display verbosity (development only)
+NEXT_PUBLIC_VERBOSE_ERRORS="true"
