saving cost summar endpoint

--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -45,7 +45,8 @@ AUTH0_AUDIENCE="http://localhost:8000"
 VERBOSE_ERROR_LOGS=true
 
 # Provider Admin API Keys (for cost tracking)
-# OpenAI: Get from https://platform.openai.com/settings/organization/admin-keys
 OPENAI_ADMIN_KEY=""
-# Anthropic: Get from Claude Console (requires admin role)
 ANTHROPIC_ADMIN_KEY=""
+# Filter Anthropic costs to specific API key name (for /costs/summary)
+ANTHROPIC_API_KEY_NAME="agentic-ai-engineering-course"
+
