implement google ADK

--- a/modules/agent-go/.env.example
+++ b/modules/agent-go/.env.example
@@ -13,6 +13,7 @@ AUTH0_NAMESPACE=https://pinacolada.co
 # LLM Providers
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
+GEMINI_API_KEY=
 
 # AWS S3
 AWS_REGION=us-east-1
